Refine PeerServerSegmentFinder